Update Jueves 9 de Julio

--- a/ProjectsDS/Week3/day1/PracticePython.ipynb
+++ b/ProjectsDS/Week3/day1/PracticePython.ipynb
@@ -1151,20 +1151,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-4037bdb00114>, line 13)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-4037bdb00114>\"\u001b[0;36m, line \u001b[0;32m13\u001b[0m\n\u001b[0;31m    dory = Dog(name=\"Dory\", age=5)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Dorytiene5 años\nAmamos a nuestra mascota Doryque tiene 5\n"
     }
    ],
    "source": [
-    "\n",
     "class Dog:\n",
     "    \n",
     "    def __init__(self, name, age):\n",
@@ -1175,19 +1173,52 @@
     "        return \"Amamos a nuestra mascota \" + self.name + \"que tiene \" + self.age\n",
     "        \n",
     "    def show_attributes(self):\n",
-    "        print((self.name + \"tiene\" + self.age + \" años\")\n",
+    "        print(self.name + \"tiene\" + self.age + \" años\")\n",
     "\n",
-    "dory = Dog(name=\"Dory\", age=5)\n",
-    "dory.show_attributes()\n",
-    "print(dory)\n"
+    "Dory = Dog(name=\"Dory\", age=5)\n",
+    "Dory.show_attributes()\n",
+    "print(Dory)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'rand' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-548c4707c7ab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'rand' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "X = rand.rand(10, 2)\n",
+    "X"
+   ]
   },
   {
    "cell_type": "code",
