--- a/ProjectsDS/Week3/test/Precurse_Exam.ipynb
+++ b/ProjectsDS/Week3/test/Precurse_Exam.ipynb
@@ -65,9 +65,61 @@
     "    for x in range(len(p)):\n",
     "        \n",
     "\n",
-    "\n",
-    "\n",
     "  n_grama(p=palabra, n=numero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Elef\nlefa\nefan\nfant\nante\n"
+    }
+   ],
+   "source": [
+    "s = \"Elefante\"\n",
+    "n = 4\n",
+    "\n",
+    "def n_gram(string, n):\n",
+    "    for pos, letter in enumerate(string):\n",
+    "        if pos+n <= len(string):\n",
+    "            print(string[pos:pos+n])\n",
+    "\n",
+    "n_gram(string=s, n=n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"Elefante\"\n",
+    "n = 4\n",
+    "\n",
+    "def n_gram_range(s):\n",
+    "    \n",
+    "\n",
+    "n_gram(string=s, n=n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def "
    ]
   },
   {
@@ -166,6 +218,77 @@
     "\n",
     "nuevalista2(sindup=a)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'sindup' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-217dbcf29882>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m             \u001b[0mrepe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mnuevalista\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrepe\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-217dbcf29882>\u001b[0m in \u001b[0;36mnuevalista\u001b[0;34m(repe)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0melem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrepe\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0melem\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msindup\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m             \u001b[0mrepe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sindup' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a = [2,2,4,3,7,7,7,8,6,7,3,1,22,2,4,3,7,7,7,8,6,7,3,1,2]\n",
+    "\n",
+    "def nuevalista(repe):\n",
+    "    b = []\n",
+    "    for elem in repe:\n",
+    "        if elem not in sindup:\n",
+    "            repe.append(elem)\n",
+    "\n",
+    "nuevalista(repe=a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "No repetidos:  [2, 4, 3, 7, 8, 6, 1, 22]\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[1, 2, 3, 4, 6, 7, 8]"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "l = [2,2,4,3,7,7,7,8,6,7,3,1,22,2,4,3,7,7,7,8,6,7,3,1,2]\n",
+    "\n",
+    "def elementosrepetidos(lista):\n",
+    "    no_repetidos = []\n",
+    "    repetidos = []\n",
+    "    for elem in lista:\n",
+    "        if elem not in no_repetidos:\n",
+    "            no_repetidos.append(elem)\n",
+    "        else:\n",
+    "            repetidos.append(elem)\n",
+    "    repetidos = list(set(repetidos))\n",
+    "\n",
+    "    print(\"No repetidos: \", no_repetidos)\n",
+    "    return repetidos\n",
+    "\n",
+    "e=elementosrepetidos(lista=l)\n",
+    "e\n"
    ]
   },
   {
@@ -529,6 +652,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wolfram.registro_nombre(nuevo_nombre=\"Benacio\")\n",
+    "###esta funcion renombra la misma instancia"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 189,
    "metadata": {
     "tags": []
@@ -606,6 +739,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{0: 'A',\n 1: 'B',\n 2: 'C',\n 3: 'D',\n 4: 'E',\n 5: 'F',\n 6: 'G',\n 7: 'H',\n 8: 'I',\n 9: 'J'}"
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "k = [0,1,2,3,4,5,6,7,8,9]\n",
+    "v = [\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\", \"I\", \"J\"]\n",
+    "\n",
+    "d = dict(zip(k,v))\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0:A\n1:B\n2:C\n3:D\n4:E\n5:F\n6:G\n7:H\n8:I\n9:J\n"
+    }
+   ],
+   "source": [
+    "for k,v in d.items():\n",
+    "    print(str(k) + \":\" + str(v))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -637,11 +810,106 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "1 Numero de paradas:  5\n2.Lista pasajeros por parada:  [9, 9, 13, 19, 18]\n3. Maximo ocupacion:  19\n"
+    }
+   ],
+   "source": [
+    "# Respuesta ejercicio 8\n",
+    "stops = [(9,0), (4,4), (7,3), (8,2), (3,4)]\n",
+    "print(\"1 Numero de paradas: \", len(stops))\n",
+    "\n",
+    "lista_pasajeros = []\n",
+    "\n",
+    "for pos, elem in enumerate(stops):\n",
+    "    if pos == 0:\n",
+    "        lista_pasajeros.append(elem[0])\n",
+    "    else:\n",
+    "        pasajeros_parada_anterior = lista_pasajeros[pos-1]\n",
+    "        lista_pasajeros.append(pasajeros_parada_anterior + elem[0] - elem[1])\n",
+    "\n",
+    "print(\"2.Lista pasajeros por parada: \", lista_pasajeros)\n",
+    "print(\"3. Maximo ocupacion: \", max(lista_pasajeros))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Respuesta ejercicio 8"
+    "lista_pasajeros = []\n",
+    "l_in = []\n",
+    "l_out = []\n",
+    "pasajeros_por_parada = \n",
+    "\n",
+    "pos = 0\n",
+    "for i, o in stops:\n",
+    "    pos += 1\n",
+    "    pasajeros = i - o\n",
+    "    lista_pasajeros.append(pasajeros)\n",
+    "\n",
+    "\n",
+    "    print(\"in: \", i)\n",
+    "    print(\"out: \", o)\n",
+    "    print(\"-----\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[9, 9, 13, 19, 18]\n"
+    }
+   ],
+   "source": [
+    "number_ocupants = 0\n",
+    "occupancy = []\n",
+    "\n",
+    "for i in stops:\n",
+    "    number_ocupants = number_ocupants + i[0]-i[1]\n",
+    "    occupancy.append(number_ocupants)\n",
+    "\n",
+    "print(occupancy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[9, 9, 13, 19, 18]\n"
+    }
+   ],
+   "source": [
+    "number_ocupants = 0\n",
+    "occupancy = []\n",
+    "\n",
+    "for i,o in stops:\n",
+    "    number_ocupants += i\n",
+    "    number_ocupants -= o\n",
+    "    occupancy.append(number_ocupants)\n",
+    "\n",
+    "print(occupancy)"
    ]
   },
   {
@@ -701,24 +969,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
+     "ename": "NameError",
+     "evalue": "name 'PARAR' is not defined",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-232-62a01bb34a88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Respuesta ejercicio 10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mjuego\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PARAR O SEGUIR?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mPARAR\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mSEGUIR\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-3639536e7caa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Respuesta ejercicio 10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mjuego\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PARAR O SEGUIR?\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mPARAR\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mSEGUIR\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'PARAR' is not defined"
      ]
     }
    ],
    "source": [
     "# Respuesta ejercicio 10\n",
-    "juego = input(\"PARAR O SEGUIR?\")\n",
+    "juego = str(input(\"PARAR O SEGUIR?\"))\n",
     "PARAR == 1\n",
     "SEGUIR == 2\n",
     "\n",
@@ -736,6 +1004,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pregunta_recurrente():\n",
+    "    while True:\n",
+    "        x = input(\"Quiere parar?\")\n",
+    "        if x == \"STOP\":\n",
+    "            break\n",
+    "        \n",
+    "pregunta_recurrente()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -745,9 +1028,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1594284224209"
   },
   "language_info": {
    "codemirror_mode": {
