--- a/ProjectsDS/Week4/day1/exercises/numpy/2_numpy_operations.ipynb
+++ b/ProjectsDS/Week4/day1/exercises/numpy/2_numpy_operations.ipynb
@@ -38,21 +38,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": "[6 1 4 4 8]\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": "array([0.16666667, 1.        , 0.25      , 0.25      , 0.125     ])"
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
@@ -121,21 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "[ 0.16666667  1.          0.25        0.25        0.125     ]\n",
-      "[ 0.16666667  1.          0.25        0.25        0.125     ]\n"
-     ]
+     "name": "stdout",
+     "text": "[0.16666667 1.         0.25       0.25       0.125     ]\n[0.16666667 1.         0.25       0.25       0.125     ]\n"
     }
    ],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -191,14 +191,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([ 0.        ,  0.5       ,  0.66666667,  0.75      ,  0.8       ])"
-      ]
+      "text/plain": "array([0.        , 0.5       , 0.66666667, 0.75      , 0.8       ])"
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
    "source": [
@@ -270,25 +268,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "x     = [0 1 2 3]\n",
-      "x + 5 = [5 6 7 8]\n",
-      "x - 5 = [-5 -4 -3 -2]\n",
-      "x * 2 = [0 2 4 6]\n",
-      "x / 2 = [ 0.   0.5  1.   1.5]\n",
-      "x // 2 = [0 0 1 1]\n"
-     ]
+     "name": "stdout",
+     "text": "x     = [0 1 2 3]\nx + 5 = [5 6 7 8]\nx - 5 = [-5 -4 -3 -2]\nx * 2 = [0 2 4 6]\nx / 2 = [0.  0.5 1.  1.5]\nx // 2 = [0 0 1 1]\n"
     }
    ],
    "source": [
@@ -352,14 +344,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([-1.  , -2.25, -4.  , -6.25])"
-      ]
+      "text/plain": "array([-1.  , -2.25, -4.  , -6.25])"
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
    "source": [
@@ -384,14 +374,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([2, 3, 4, 5])"
-      ]
+      "text/plain": "array([2, 3, 4, 5])"
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 10
     }
    ],
    "source": [
@@ -462,6 +450,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([0, 1, 2, 3])"
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "np.absolute(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "collapsed": false,
@@ -471,39 +482,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([2, 1, 0, 1, 2])"
-      ]
+      "text/plain": "array([0, 1, 2, 3])"
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.absolute(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 0, 1, 2])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
@@ -519,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -528,14 +512,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([ 5.,  5.,  2.,  1.])"
-      ]
+      "text/plain": "array([5., 5., 2., 1.])"
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 13
     }
    ],
    "source": [
@@ -555,16 +537,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([0.        , 1.57079633, 3.14159265])"
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
    "source": [
-    "theta = np.linspace(0, np.pi, 3)"
+    "theta = np.linspace(0, np.pi, 3)\n",
+    "theta"
    ]
   },
   {
@@ -576,23 +568,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "theta      =  [ 0.          1.57079633  3.14159265]\n",
-      "sin(theta) =  [  0.00000000e+00   1.00000000e+00   1.22464680e-16]\n",
-      "cos(theta) =  [  1.00000000e+00   6.12323400e-17  -1.00000000e+00]\n",
-      "tan(theta) =  [  0.00000000e+00   1.63312394e+16  -1.22464680e-16]\n"
-     ]
+     "name": "stdout",
+     "text": "theta      =  [0.         1.57079633 3.14159265]\nsin(theta) =  [0.0000000e+00 1.0000000e+00 1.2246468e-16]\ncos(theta) =  [ 1.000000e+00  6.123234e-17 -1.000000e+00]\ntan(theta) =  [ 0.00000000e+00  1.63312394e+16 -1.22464680e-16]\n"
     }
    ],
    "source": [
@@ -869,26 +857,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "[  0.  10.  20.  30.  40.]\n"
-     ]
+     "name": "stdout",
+     "text": "[ 0. 10. 20. 30. 40.]\n"
     }
    ],
    "source": [
     "x = np.arange(5)\n",
     "y = np.empty(5)\n",
     "np.multiply(x, 10, out=y)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[ 0 10 20 30 40]\n"
+    }
+   ],
+   "source": [
+    "x = np.arange(5)\n",
+    "y = None\n",
+    "y = np.multiply(x, 10)\n",
     "print(y)"
    ]
   },
@@ -901,23 +908,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "[  1.   0.   2.   0.   4.   0.   8.   0.  16.   0.]\n"
-     ]
+     "name": "stdout",
+     "text": "[ 1.  0.  2.  0.  4.  0.  8.  0. 16.  0.]\n"
     }
    ],
    "source": [
+    "x = np.arange(5)\n",
     "y = np.zeros(10)\n",
     "np.power(2, x, out=y[::2])\n",
     "print(y)"
@@ -946,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -955,14 +962,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "15"
-      ]
+      "text/plain": "15"
      },
-     "execution_count": 26,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 25
     }
    ],
    "source": [
@@ -1078,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1088,18 +1093,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([[ 1,  2,  3,  4,  5],\n",
-       "       [ 2,  4,  6,  8, 10],\n",
-       "       [ 3,  6,  9, 12, 15],\n",
-       "       [ 4,  8, 12, 16, 20],\n",
-       "       [ 5, 10, 15, 20, 25]])"
-      ]
+      "text/plain": "array([[ 1,  2,  3,  4,  5],\n       [ 2,  4,  6,  8, 10],\n       [ 3,  6,  9, 12, 15],\n       [ 4,  8, 12, 16, 20],\n       [ 5, 10, 15, 20, 25]])"
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 30
     }
    ],
    "source": [
@@ -1160,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1174,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1183,14 +1182,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([5, 6, 7])"
-      ]
+      "text/plain": "array([5, 6, 7])"
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 27
     }
    ],
    "source": [
@@ -1208,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1217,14 +1214,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([5, 6, 7])"
-      ]
+      "text/plain": "array([5, 6, 7])"
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 28
     }
    ],
    "source": [
@@ -1243,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1252,16 +1247,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([[ 1.,  1.,  1.],\n",
-       "       [ 1.,  1.,  1.],\n",
-       "       [ 1.,  1.,  1.]])"
-      ]
+      "text/plain": "array([[1., 1., 1.],\n       [1., 1., 1.],\n       [1., 1., 1.]])"
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 29
     }
    ],
    "source": [
@@ -1409,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1446,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1455,15 +1446,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([[ 1.,  2.,  3.],\n",
-       "       [ 1.,  2.,  3.]])"
-      ]
+      "text/plain": "array([[1., 2., 3.],\n       [1., 2., 3.],\n       [1., 2., 3.]])"
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 31
     }
    ],
    "source": [
@@ -1481,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1592,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1601,14 +1589,14 @@
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (3,2) (3,) ",
      "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3) (3,1) ",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-9e16e9f98da6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mM\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,2) (3,) "
+      "\u001b[0;32m<ipython-input-34-8cac1d547906>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mM\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3) (3,1) "
      ]
     }
    ],
@@ -1628,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1637,14 +1625,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "(3, 1)"
-      ]
+      "text/plain": "(3, 1, 1)"
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 35
     }
    ],
    "source": [
@@ -1653,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1662,16 +1648,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([[ 1.,  1.],\n",
-       "       [ 2.,  2.],\n",
-       "       [ 3.,  3.]])"
-      ]
+      "text/plain": "array([[[1., 1., 1.],\n        [1., 1., 1.]],\n\n       [[2., 2., 2.],\n        [2., 2., 2.]],\n\n       [[3., 3., 3.],\n        [3., 3., 3.]]])"
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 36
     }
    ],
    "source": [
@@ -1754,16 +1736,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[0.0187898 , 0.6176355 , 0.61209572],\n       [0.616934  , 0.94374808, 0.6818203 ],\n       [0.3595079 , 0.43703195, 0.6976312 ],\n       [0.06022547, 0.66676672, 0.67063787],\n       [0.21038256, 0.1289263 , 0.31542835],\n       [0.36371077, 0.57019677, 0.43860151],\n       [0.98837384, 0.10204481, 0.20887676],\n       [0.16130952, 0.65310833, 0.2532916 ],\n       [0.46631077, 0.24442559, 0.15896958],\n       [0.11037514, 0.65632959, 0.13818295]])"
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
    "source": [
-    "X = np.random.random((10, 3))"
+    "X = np.random.random((10, 3))\n",
+    "X"
    ]
   },
   {
@@ -1775,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1784,14 +1776,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([ 0.53514715,  0.66567217,  0.44385899])"
-      ]
+      "text/plain": "array([0.33559198, 0.50202136, 0.41755358])"
      },
-     "execution_count": 18,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 39
     }
    ],
    "source": [
@@ -1808,16 +1798,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[-0.31680218,  0.11561413,  0.19454214],\n       [ 0.28134202,  0.44172672,  0.26426671],\n       [ 0.02391592, -0.06498941,  0.28007761],\n       [-0.27536651,  0.16474535,  0.25308429],\n       [-0.12520942, -0.37309507, -0.10212523],\n       [ 0.02811879,  0.06817541,  0.02104793],\n       [ 0.65278186, -0.39997655, -0.20867683],\n       [-0.17428246,  0.15108696, -0.16426198],\n       [ 0.1307188 , -0.25759577, -0.258584  ],\n       [-0.22521684,  0.15430823, -0.27937063]])"
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
    "source": [
-    "X_centered = X - Xmean"
+    "X_centered = X - Xmean\n",
+    "X_centered"
    ]
   },
   {
@@ -1829,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1838,14 +1838,12 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "array([  2.22044605e-17,  -7.77156117e-17,  -1.66533454e-17])"
-      ]
+      "text/plain": "array([-5.55111512e-18,  1.11022302e-17,  1.11022302e-17])"
      },
-     "execution_count": 20,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 42
     }
    ],
    "source": [
@@ -1876,7 +1874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1901,7 +1899,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -5012,9 +5019,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1594204359146"
   },
   "language_info": {
    "codemirror_mode": {
