--- a/ProjectsDS/Week3/day4/class_rochi.ipynb
+++ b/ProjectsDS/Week3/day4/class_rochi.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -102,8 +102,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once you have the class Dinosaur and its methods defined, create an instance **tyrannosaurus**. Your friend has told you that Tyrannosaurus rex had 50 to 60 solid cone-shaped teeth as big as bananas. Set the number of teeth as 60 since you will have the opportunity of changing it later using the method `many_teeth`. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Number of teeth:  50\nShape of teeth:  cone-as-big-as-bananas\n"
+    }
+   ],
+   "source": [
+    "# create an Tyrannosaurus rex with 60 teeth\n",
+    "class Dinosaur:\n",
+    "\n",
+    "    def __init__(self, teeth, shape):\n",
+    "        self.teeth = teeth\n",
+    "        self.shape = shape\n",
+    "\n",
+    "    def many_teeth(self, numberofteeth):\n",
+    "        self.teeth = numberofteeth\n",
+    "\n",
+    "Tyrannosaurus = Dinosaur(teeth=50,shape=\"cone-as-big-as-bananas\")\n",
+    "print(\"Number of teeth: \" , Tyrannosaurus.teeth)\n",
+    "print(\"Shape of teeth: \", Tyrannosaurus.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tyrannosaurus rex are the most dangerous dinosaurs so please, use the method `is_dangerous` with the argument \"yes, it is dangerous\", to set this up. It should return a message telling you to give a boolean, True or False, instead of the string you used as argument. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -119,40 +162,29 @@
     "    dangerous = True\n",
     "    print(\"Be careful\")\n",
     "\n",
-    "is_dangerous(self=True)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Once you have the class Dinosaur and its methods defined, create an instance **tyrannosaurus**. Your friend has told you that Tyrannosaurus rex had 50 to 60 solid cone-shaped teeth as big as bananas. Set the number of teeth as 60 since you will have the opportunity of changing it later using the method `many_teeth`. "
+    "is_dangerous(self=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "yes, it is dangerous\n"
+    }
+   ],
    "source": [
-    "# create an Tyrannosaurus rex with 60 teeth\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Tyrannosaurus rex are the most dangerous dinosaurs so please, use the method `is_dangerous` with the argument \"yes, it is dangerous\", to set this up. It should return a message telling you to give a boolean, True or False, instead of the string you used as argument. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# call is_dangerous method saying \"yes, it is dangerous\"\n"
+    "# call is_dangerous method saying \"yes, it is dangerous\"\n",
+    "def is_dangerous(self, dangerous):\n",
+    "    self.dangerous=dangerous\n",
+    "\n",
+    "is_dangerous(self=Tyrannosaurus, dangerous=\"yes, it is dangerous\")\n",
+    "print(Tyrannosaurus.dangerous)"
    ]
   },
   {
@@ -168,7 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# call is_dangerous method with True as an argument\n"
+    "# call is_dangerous method with True as an argument\n",
+    "\n"
    ]
   },
   {
@@ -355,7 +388,7 @@
   "kernelspec": {
    "display_name": "Python 3.8.3 32-bit",
    "language": "python",
-   "name": "python_defaultSpec_1593788072452"
+   "name": "python_defaultSpec_1594507432133"
   },
   "language_info": {
    "codemirror_mode": {
