--- a/ProjectsDS/Week3/day1/PracticePython.ipynb
+++ b/ProjectsDS/Week3/day1/PracticePython.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -58,7 +58,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Rochi in 2079 you'll be 100 years old.\n"
+     "text": "rochi in 2079 you'll be 100 years old.\n"
     }
    ],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -80,18 +80,18 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Rochi in 2079 you'll be 100 years old.\nRochi in 2079 you'll be 100 years old.\nRochi in 2079 you'll be 100 years old.\n"
+     "text": "rochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\nrochi in 2079 you'll be 100 years old.\n"
     }
    ],
    "source": [
-    "n = int(n = input(\"Enter any number\"))\n",
+    "n = int(input(\"Enter any number\"))\n",
     "for i in range(x):\n",
     "    print(str(name) + \" in \" + str(year) + \" you'll be 100 years old.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
       "text/plain": "'4444444'"
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 16
     }
    ],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {
     "tags": []
    },
@@ -118,7 +118,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Rochi in 2079 you'll be 100 years old.\n"
+     "text": "rochi in 2079 you'll be 100 years old.\n"
     }
    ],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,27 +197,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 35,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-62-eba6930f75ce>, line 1)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-62-eba6930f75ce>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(n for n in a:[lambda a: a%2])\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
     }
    ],
    "source": [
-    "print(n for n in a:[lambda a: a%2]) "
+    "for n in a: [lambda a: a % 2]\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -245,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
@@ -264,15 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "perro  repetido\ngato  repetido\ndelfin  repetido\nmono  repetido\nperro  repetido\ncaballo  repetido\nvaca  repetido\nvaca  repetido\nmono  repetido\njirafa  repetido\ncerdo  repetido\ncaballo  repetido\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'elem' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-5bf1c84aafab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mnuevalista\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msindup\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-5bf1c84aafab>\u001b[0m in \u001b[0;36mnuevalista\u001b[0;34m(sindup)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mnuevalista\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msindup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mwhile\u001b[0m \u001b[0melem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0melem\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0melem\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\" repetido\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'elem' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1121,16 +1126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "-28"
-     },
-     "metadata": {},
-     "execution_count": 34
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'walk' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-cd5dae538c42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwalk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mwalk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'walk' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1182,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1191,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,24 +1208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
      "ename": "NameError",
-     "evalue": "name 'rand' is not defined",
+     "evalue": "name 'random' is not defined",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-548c4707c7ab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'rand' is not defined"
+      "\u001b[0;32m<ipython-input-46-be212d209af5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrandom_int\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'random' is not defined"
      ]
     }
    ],
    "source": [
-    "X = rand.rand(10, 2)\n",
-    "X"
+    "random_int = random.randint(10, 2)\n"
    ]
   },
   {
@@ -1243,7 +1250,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594156220632",
+   "name": "python_defaultSpec_1594507431514",
    "display_name": "Python 3.8.3 64-bit"
   }
  },
